# BITS-CS-G527-CC

./: .gitignore  README.md
lab-1/api-fastapi/: pyproject.toml
lab-1/api-fastapi/api_fastapi/: main.py  models.py
lab-1/api-flask/: pyproject.toml
lab-1/api-flask/api_flask/: app.py  models.py  store.py
lab-1/api-ktor/: build.gradle.kts  settings.gradle.kts
lab-1/api-ktor/src/main/kotlin/xyz/ajraspi/cc/webservice/: Application.kt
lab-1/api-ktor/src/main/kotlin/xyz/ajraspi/cc/webservice/course/: Routes.kt
lab-1/api-ktor/src/main/kotlin/xyz/ajraspi/cc/webservice/course/model/: Course.kt
lab-1/api-ktor/src/main/kotlin/xyz/ajraspi/cc/webservice/store/: InMemoryStore.kt  Store.kt
lab-1/api-ktor/src/main/resources/: application.yaml
lab-1/api-spring-boot/: build.gradle.kts  gradle.properties  settings.gradle.kts
lab-1/api-spring-boot/src/main/kotlin/xyz/ajraspi/cc/webservice/: Application.kt
lab-1/api-spring-boot/src/main/kotlin/xyz/ajraspi/cc/webservice/controllers/: CourseController.kt
lab-1/api-spring-boot/src/main/kotlin/xyz/ajraspi/cc/webservice/model/: Course.kt
lab-1/api-spring-boot/src/main/kotlin/xyz/ajraspi/cc/webservice/store/: InMemoryStore.kt  Store.kt
